# stm32-rust-test

./: Cargo.toml  README.md  memory.x
src/: main.rs
