[package]
authors = ["Dylan Nash"]
edition = "2018"
readme = "README.md"
name = "spi-rust"
version = "0.1.0"

[dependencies]
embedded-hal = "0.2"
nb = "0.1.2"
cortex-m = "0.6"
cortex-m-rt = "0.6"
panic-halt = "0.2"

[dependencies.stm32f4xx-hal]
version = "0.8"
features = ["rt", "stm32f401"]

# this lets you use `cargo fix`!
[[bin]]
name = "spi-rust"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
